--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,29 @@
 {
-  "tasks": {
-    "dev": "deno run --watch main.ts"
-  },
+  "workspace": [
+    "packages/*"
+  ],
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
+  },
+  "tasks": {
+    "check": "deno check **/*.ts",
+    "lint": "deno lint",
+    "test": "deno test --doc --coverage"
+  },
+  "lint": {
+    "rules": {
+      "tags": [
+        "recommended"
+      ]
+    }
+  },
+  "fmt": {
+    "useTabs": true,
+    "lineWidth": 80,
+    "indentWidth": 4,
+    "singleQuote": false
+  },
+  "compilerOptions": {
+    "strict": true
   }
 }
