Add CLI functionality to the DX-Kit, including health and config commands. Update deno.json to include a task for running the CLI.

--- a/deno.json
+++ b/deno.json
@@ -6,6 +6,7 @@
 		"@std/assert": "jsr:@std/assert@1"
 	},
 	"tasks": {
+		"cli": "deno run -A packages/cli/mod.ts",
 		"check": "deno check **/*.ts",
 		"lint": "deno lint",
 		"test": "deno test --doc --coverage"
